--- a/friction-master/assets/css/style-new.css
+++ b/friction-master/assets/css/style-new.css
@@ -1056,7 +1056,7 @@
 }
 
 .swiper-wrapper {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
