--- a/friction-master/assets/css/main.css
+++ b/friction-master/assets/css/main.css
@@ -6116,12 +6116,69 @@ p {
 		background-color: rgba(0, 0, 0, 0.5);
 	}
 }
-#load_catalog{
-	margin-top: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+
+#load_catalog {
+width: 60px;
+height: 60px;
+margin: 40px auto;
 }
+
+#load_catalog .sk-cube {
+width: 33%;
+height: 33%;
+background-color: #333;
+float: left;
+-webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+		animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+}
+#load_catalog .sk-cube1 {
+-webkit-animation-delay: 0.2s;
+		animation-delay: 0.2s; }
+#load_catalog .sk-cube2 {
+-webkit-animation-delay: 0.3s;
+		animation-delay: 0.3s; }
+#load_catalog .sk-cube3 {
+-webkit-animation-delay: 0.4s;
+		animation-delay: 0.4s; }
+#load_catalog .sk-cube4 {
+-webkit-animation-delay: 0.1s;
+		animation-delay: 0.1s; }
+#load_catalog .sk-cube5 {
+-webkit-animation-delay: 0.2s;
+		animation-delay: 0.2s; }
+#load_catalog .sk-cube6 {
+-webkit-animation-delay: 0.3s;
+		animation-delay: 0.3s; }
+#load_catalog .sk-cube7 {
+-webkit-animation-delay: 0s;
+		animation-delay: 0s; }
+#load_catalog .sk-cube8 {
+-webkit-animation-delay: 0.1s;
+		animation-delay: 0.1s; }
+#load_catalog .sk-cube9 {
+-webkit-animation-delay: 0.2s;
+		animation-delay: 0.2s; }
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+0%, 70%, 100% {
+	-webkit-transform: scale3D(1, 1, 1);
+			transform: scale3D(1, 1, 1);
+} 35% {
+	-webkit-transform: scale3D(0, 0, 1);
+			transform: scale3D(0, 0, 1); 
+}
+}
+
+@keyframes sk-cubeGridScaleDelay {
+0%, 70%, 100% {
+	-webkit-transform: scale3D(1, 1, 1);
+			transform: scale3D(1, 1, 1);
+} 35% {
+	-webkit-transform: scale3D(0, 0, 1);
+			transform: scale3D(0, 0, 1);
+} 
+}
+
 .catalog_nodata{
 	font-size: 20px;
 	font-weight: bold;
