fix: button back on the left

--- a/friction-master/assets/css/main.css
+++ b/friction-master/assets/css/main.css
@@ -4336,6 +4336,8 @@ p {
     justify-content: flex-start;
     align-items: center;
 	min-height: 66px;
+	width: 100%;
+    max-width: 1840px;
 }
 
 .icon-arrow-link-back-to-catalog {
